feat: Add references for Cellular Automaton section

--- a/Proyecto/investigacion.tex
+++ b/Proyecto/investigacion.tex
@@ -292,6 +292,60 @@
 
 \section{Parameters Required on a Cellular Automata}
 
+CA, several key parameters need to be defined. These parameters determine the structure, behavior, and evolution of the CA. The primary parameters include:
+
+\subsection{Grid Structure}
+
+\begin{itemize}
+    \item \textbf{Dimension:} The number of dimensions of the CA grid. Common configurations are one-dimensional (a line of cells) and two-dimensional (a grid of cells).
+    \item \textbf{Size:} The number of cells in each dimension. For example, a one-dimensional CA might have 100 cells, while a two-dimensional CA might have a 100x100 grid.
+\end{itemize}
+
+\subsection{Cell States}
+
+\begin{itemize}
+    \item \textbf{Number of States:} The finite set of possible states each cell can be in. For example, in a binary CA, each cell can be in one of two states: 0 or 1.
+    \item \textbf{Initial Configuration:} The initial state of all cells at time \( t = 0 \). This can be a specific pattern, a random configuration, or any other predefined setup.
+\end{itemize}
+
+\subsection{Neighborhood}
+
+\begin{itemize}
+    \item \textbf{Radius:} The distance defining the neighborhood of a cell. In a one-dimensional CA, a radius of 1 means the neighborhood includes the cell itself and its immediate left and right neighbors.
+    \item \textbf{Shape:} The shape of the neighborhood. Common shapes include the von Neumann neighborhood (cells directly adjacent in cardinal directions) and the Moore neighborhood (cells adjacent in both cardinal and diagonal directions).
+\end{itemize}
+
+\subsection{Transition Function}
+
+\begin{itemize}
+    \item \textbf{Local Rule:} The function that determines the next state of a cell based on its current state and the states of its neighbors. This function can be deterministic or probabilistic.
+    \item \textbf{Update Scheme:} Whether the CA updates all cells simultaneously (synchronously) or one at a time (asynchronously).
+\end{itemize}
+
+\subsection{Boundary Conditions}
+
+\begin{itemize}
+    \item \textbf{Periodic Boundaries:} Cells at the edge of the grid wrap around to the opposite edge, creating a toroidal structure.
+    \item \textbf{Fixed Boundaries:} Cells at the edge of the grid have a fixed state or do not change state based on neighbors outside the grid.
+    \item \textbf{Reflective Boundaries:} The states of edge cells are influenced by reflecting the states of neighbors within the grid.
+\end{itemize}
+
+\subsection{Time Steps}
+
+\begin{itemize}
+    \item \textbf{Discrete Time:} CA evolution occurs in discrete time steps, typically denoted by \( t = 0, 1, 2, \ldots \).
+    \item \textbf{Duration:} The number of time steps the CA runs for, which can be predefined or based on a stopping condition.
+\end{itemize}
+
+\subsection{Output and Visualization}
+
+\begin{itemize}
+    \item \textbf{State Representation:} How the states of the cells are represented visually or numerically (e.g., using different colors or symbols for different states).
+    \item \textbf{Data Collection:} Methods for recording the states of cells at each time step for analysis and visualization.
+\end{itemize}
+
+By defining these parameters, one can fully specify a Cellular Automaton model and simulate its evolution. The flexibility in choosing these parameters allows CAs to be adapted to a wide range of applications, from simple theoretical models to complex simulations in various fields of science and engineering.
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -299,6 +353,59 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Versions of Cellular Automata}
+CA have evolved into various versions and classifications based on their dimensionality, state complexity, neighborhood structure, and rule sets. Here are some of the key versions of Cellular Automata:
+
+\subsection{By Dimensionality}
+
+\begin{itemize}
+    \item \textbf{One-Dimensional Cellular Automata:} Each cell has two neighbors (left and right). These are the simplest form and are often used for theoretical studies. An example is the elementary cellular automata defined by Stephen Wolfram.
+    \item \textbf{Two-Dimensional Cellular Automata:} Each cell has multiple neighbors depending on the neighborhood structure. Conway's Game of Life is a well-known example.
+    \item \textbf{Higher-Dimensional Cellular Automata:} These include three-dimensional and higher-dimensional grids, which are used for more complex simulations but are less common due to increased computational complexity.
+\end{itemize}
+
+\subsection{By Cell States}
+
+\begin{itemize}
+    \item \textbf{Binary Cellular Automata:} Each cell can be in one of two states, typically denoted as 0 and 1. This is the simplest form and is widely studied.
+    \item \textbf{Multi-State Cellular Automata:} Cells can exist in more than two states. These automata are used to model more complex systems where each cell can represent multiple possible conditions.
+    \item \textbf{Continuous-State Cellular Automata:} Cells can take on a range of continuous values, rather than discrete states, allowing for the modeling of more nuanced phenomena.
+\end{itemize}
+
+\subsection{By Neighborhood Type}
+
+\begin{itemize}
+    \item \textbf{Von Neumann Neighborhood:} Consists of the four orthogonal neighbors (north, south, east, and west) of a cell in a two-dimensional grid.
+    \item \textbf{Moore Neighborhood:} Includes the eight surrounding cells (both orthogonal and diagonal neighbors) in a two-dimensional grid.
+    \item \textbf{Extended Neighborhoods:} Larger neighborhoods that include more distant neighbors, such as the Margolus neighborhood.
+\end{itemize}
+
+\subsection{By Rule Type}
+
+\begin{itemize}
+    \item \textbf{Deterministic Cellular Automata:} The next state of each cell is determined entirely by the current state and the states of its neighbors, following a fixed rule.
+    \item \textbf{Probabilistic Cellular Automata:} The next state of each cell is determined probabilistically, allowing for the modeling of stochastic processes.
+    \item \textbf{Totalistic Cellular Automata:} The state of a cell depends only on the total number (or sum) of particular states in the neighborhood, not on the exact configuration of those states.
+\end{itemize}
+
+\subsection{By Boundary Conditions}
+
+\begin{itemize}
+    \item \textbf{Periodic Boundary Conditions:} The grid is treated as if it wraps around on itself, creating a toroidal structure.
+    \item \textbf{Fixed Boundary Conditions:} The states of the cells at the boundaries are fixed and do not change.
+    \item \textbf{Reflective Boundary Conditions:} The states of the cells at the boundaries reflect the states of their neighbors inside the grid.
+\end{itemize}
+
+\subsection{Special Types of Cellular Automata}
+
+\begin{itemize}
+    \item \textbf{Elementary Cellular Automata:} A class of one-dimensional binary cellular automata defined by Stephen Wolfram, consisting of 256 possible rules.
+    \item \textbf{Conway's Game of Life:} A two-dimensional binary cellular automaton devised by John Conway, famous for its simple rules leading to complex behavior.
+    \item \textbf{Langton's Ant:} A two-dimensional Turing machine with very simple rules but complex emergent behavior.
+    \item \textbf{Fuzzy Cellular Automata:} Combines cellular automata with fuzzy logic to handle uncertainty and imprecision in state transitions.
+    \item \textbf{Quantum Cellular Automata:} An extension of cellular automata principles to quantum computing, allowing cells to be in superpositions of states.
+\end{itemize}
+
+These different versions of cellular automata enable the modeling and simulation of a wide range of systems, from simple theoretical constructs to complex real-world phenomena.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -307,6 +414,35 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Analogy with the Nature}
     
+CA come in various forms, each inspired by different aspects of natural systems. These versions differ based on their dimensionality, complexity, neighborhood structure, and the rules that govern them.
+
+\subsection{Dimensionality}
+
+Just as nature operates at different scales, from the linear growth of a vine to the branching of trees and the intricate structures of coral reefs, CAs can also be one-dimensional, two-dimensional, or even higher-dimensional. One-dimensional CAs, like a line of ants following each other, are the simplest and often used for theoretical studies \cite{wolfram2002}. Two-dimensional CAs resemble the spread of moss on a rock surface, where each cell interacts with its immediate neighbors in a grid pattern \cite{gardner1970}. Higher-dimensional CAs, though more complex, can model phenomena such as the three-dimensional growth of crystals or the propagation of signals in a neural network.
+
+\subsection{Cell States}
+
+In the same way that an organism can be alive or dead, hibernating or active, cells in a CA can exist in various states. Binary CAs, where each cell can be either 0 or 1, are analogous to on/off states, such as a plant being either alive or dead. Multi-state CAs extend this analogy by allowing for intermediate states, similar to a tree showing different stages of leaf growth, colors, and shedding. Continuous-state CAs go even further, representing states on a spectrum, akin to the varying shades of green in a forest canopy.
+
+\subsection{Neighborhoods}
+
+The interactions in nature are often local. A tree might only affect and be affected by the trees around it. Similarly, in a CA, the concept of a neighborhood defines which cells influence a given cell's state. In a von Neumann neighborhood, a cell's state is influenced by its four orthogonal neighbors, like a central plant interacting with the four closest plants around it. In a Moore neighborhood, the interaction extends to include diagonal neighbors as well, resembling a plant affected by all surrounding plants in a 3x3 grid.
+
+\subsection{Rule Types}
+
+The rules that govern a CA's evolution can be deterministic or probabilistic, mirroring the predictability or randomness found in nature. Deterministic CAs follow fixed rules, much like the consistent seasonal changes that influence plant growth. Probabilistic CAs, on the other hand, incorporate randomness, similar to how weather patterns can unpredictably affect an ecosystem. Totalistic CAs simplify these interactions by considering the sum of states in the neighborhood, analogous to how the overall density of a forest might influence the growth of an individual tree rather than the specific arrangement of nearby trees.
+
+\subsection{Boundary Conditions}
+
+Nature often operates within boundaries, such as the edge of a forest or the banks of a river. In CAs, boundary conditions define the limits of the grid. Periodic boundaries wrap around, creating a seamless, toroidal structure, similar to the cyclical nature of seasons or life cycles. Fixed boundaries impose a rigid edge, like the shorelines of an island. Reflective boundaries mimic natural barriers that reflect influence, akin to a mountain reflecting sound waves.
+
+\subsection{Special Types of Cellular Automata}
+
+Several special types of CAs draw direct analogies from natural phenomena. Elementary Cellular Automata, defined by Stephen Wolfram, explore simple, one-dimensional rules that can lead to complex behavior \cite{wolfram2002}, much like simple genetic rules can lead to diverse biological traits. Conway's Game of Life, a two-dimensional CA, mirrors the lifecycle of organisms with birth, survival, and death rules, showing how simple interactions can create complex, lifelike patterns \cite{gardner1970}. Langton's Ant is an example of how simple local rules can produce unexpected, emergent behavior, similar to how individual ant movements result in organized colony paths \cite{langton1986}.
+
+Fuzzy Cellular Automata combine CA principles with fuzzy logic to handle uncertainty \cite{pedrycz2010}, much like how plants might adapt their growth based on varying environmental conditions rather than strict rules. Quantum Cellular Automata extend these concepts into the quantum realm, where cells can exist in superpositions of states, analogous to quantum particles exhibiting multiple states simultaneously \cite{brennen2003}.
+
+These diverse versions of Cellular Automata reflect the richness and variety found in natural systems, allowing for the modeling and simulation of both simple and complex phenomena across different fields of study.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
