--- a/Proyecto/tau.bib
+++ b/Proyecto/tau.bib
@@ -95,3 +95,60 @@
   address   = {Hoboken, NJ},
   isbn      = {978-0-470-11484-7}
 }
+
+@book{wolfram2002,
+  author    = {Stephen Wolfram},
+  title     = {A New Kind of Science},
+  year      = {2002},
+  publisher = {Wolfram Media},
+  address   = {Champaign, IL},
+  isbn      = {978-1-57955-008-0}
+}
+@article{gardner1970,
+  author  = {Martin Gardner},
+  title   = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
+  journal = {Scientific American},
+  year    = {1970},
+  volume  = {223},
+  number  = {4},
+  pages   = {120-123}
+}
+@article{langton1986,
+  author  = {Christopher G. Langton},
+  title   = {Studying Artificial Life with Cellular Automata},
+  journal = {Physica D: Nonlinear Phenomena},
+  year    = {1986},
+  volume  = {22},
+  number  = {1-3},
+  pages   = {120-149},
+  doi     = {10.1016/0167-2789(86)90237-X}
+}
+
+@book{pedrycz2010,
+  author    = {Witold Pedrycz and Fernando Gomide},
+  title     = {Fuzzy Systems Engineering: Toward Human-Centric Computing},
+  year      = {2010},
+  publisher = {John Wiley \& Sons},
+  address   = {Hoboken, NJ},
+  isbn      = {978-0-470-27895-2}
+}
+
+@article{brennen2003,
+  author  = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
+  title   = {Criteria for exact QCA initialization},
+  journal = {Quantum Information and Computation},
+  year    = {2003},
+  volume  = {3},
+  number  = {3},
+  pages   = {234-242}
+}
+
+@article{brennen2003,
+  author  = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
+  title   = {Criteria for exact QCA initialization},
+  journal = {Quantum Information and Computation},
+  year    = {2003},
+  volume  = {3},
+  number  = {3},
+  pages   = {234-242}
+}
