--- a/Proyecto/tau.bib
+++ b/Proyecto/tau.bib
@@ -152,3 +152,84 @@
   number  = {3},
   pages   = {234-242}
 }
+
+
+@article{gardner1970,
+  author  = {Martin Gardner},
+  title   = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
+  journal = {Scientific American},
+  year    = {1970},
+  volume  = {223},
+  number  = {4},
+  pages   = {120-123}
+}
+
+@article{langton1986,
+  author  = {Christopher G. Langton},
+  title   = {Studying Artificial Life with Cellular Automata},
+  journal = {Physica D: Nonlinear Phenomena},
+  year    = {1986},
+  volume  = {22},
+  number  = {1-3},
+  pages   = {120-149},
+  doi     = {10.1016/0167-2789(86)90237-X}
+}
+
+@book{golly,
+  author    = {The Golly Gang},
+  title     = {Golly - A Game of Life Simulator},
+  url       = {http://golly.sourceforge.net/},
+  note      = {Accessed: 2024-06-22}
+}
+
+@article{rendell2002turing,
+  author    = {Paul Rendell},
+  title     = {Turing Machine Universality of the Game of Life},
+  journal   = {Fundamenta Informaticae},
+  year      = {2002},
+  volume    = {29},
+  pages     = {231-243},
+  doi       = {10.3233/FI-2002-292301}
+}
+
+@book{wolfram2002,
+  author    = {Stephen Wolfram},
+  title     = {A New Kind of Science},
+  year      = {2002},
+  publisher = {Wolfram Media},
+  address   = {Champaign, IL},
+  isbn      = {978-1-57955-008-0}
+}
+
+@article{wolfram1983,
+  author  = {Stephen Wolfram},
+  title   = {Statistical Mechanics of Cellular Automata},
+  journal = {Reviews of Modern Physics},
+  year    = {1983},
+  volume  = {55},
+  number  = {3},
+  pages   = {601-644},
+  doi     = {10.1103/RevModPhys.55.601}
+}
+
+@article{cook2004,
+  author  = {Matthew Cook},
+  title   = {Universality in Elementary Cellular Automata},
+  journal = {Complex Systems},
+  year    = {2004},
+  volume  = {15},
+  number  = {1},
+  pages   = {1-40},
+  url     = {http://www.complex-systems.com/pdf/15-1-1.pdf}
+}
+
+@article{wolfram1984,
+  author  = {Stephen Wolfram},
+  title   = {Universality and Complexity in Cellular Automata},
+  journal = {Physica D: Nonlinear Phenomena},
+  year    = {1984},
+  volume  = {10},
+  number  = {1-2},
+  pages   = {1-35},
+  doi     = {10.1016/0167-2789(84)90245-8}
+}
