--- a/Proyecto/investigacion.tex
+++ b/Proyecto/investigacion.tex
@@ -73,7 +73,7 @@
 
 \section{Introduction}
 
-    Cellular automata (CA) are \textit{discrete, abstract computational systems} that have proved useful both as general models of complexity and as more specific representations of non-linear dynamics in a variety of scientific fields. 
+    Cellular automata  are \textit{discrete, abstract computational systems} that have proved useful both as general models of complexity and as more specific representations of non-linear dynamics in a variety of scientific fields. 
 
     Firstly, CA are typically spatially and temporally discrete. They are composed of a finite or denumerable set of homogeneous, simple units called cells. At each time unit, the cells instantiate one of a finite set of states. 
     They evolve in parallel at discrete time steps, following state update functions or dynamical transition rules. 
@@ -96,7 +96,7 @@
     posthumously in 1966 in the book ``Theory of Self-Reproducing Automata'', edited by 
     Arthur W. Burks.
 
-    A cellular automaton (CA) is a one-dimensional array (which can be infinitely long in both directions) of cells. 
+    A cellular automaton  is a one-dimensional array (which can be infinitely long in both directions) of cells. 
     Time progresses in discrete steps, and at each step, every cell is in one of a finite number of possible states. The state of each cell changes at each tick of the clock, and this new state is determined entirely by the current state of the cell and its immediate left and right neighbors. 
     This state change is governed by a function called the local rule, which is identical for all cells. 
     The CA operates autonomously without any external input. 
@@ -528,7 +528,7 @@ In the following section, we present some articles where you can find implementa
 
 \subsection{ A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata }
 
-The article \textit{A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata} discusses a novel approach to modeling cancerous tumor growth by integrating cellular automata (CA) with deep learning techniques, particularly convolutional neural networks (CNNs). This integration aims to leverage the strengths of both methods to create a robust and scalable solution for simulating tumor development.\cite{MATIN2024102752}
+The article \textit{A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata} discusses a novel approach to modeling cancerous tumor growth by integrating cellular automata  with deep learning techniques, particularly convolutional neural networks (CNNs). This integration aims to leverage the strengths of both methods to create a robust and scalable solution for simulating tumor development.\cite{MATIN2024102752}
 
 \subsubsection{Overview of Cellular Automata and CNN Integration}
 
@@ -554,11 +554,11 @@ This research paves the way for more sophisticated and adaptable models in the f
 
 \subsection{Implementing Fuzzy Cellular Automata in Breast Cancer Image Segmentation}
 
-The article \textit{Breast Cancer Images Segmentation using Fuzzy Cellular Automaton} presents an innovative approach for segmenting breast cancer images by integrating Cellular Automata (CA) with Fuzzy Logic, resulting in the so-called Fuzzy Cellular Automaton. This method aims to enhance the accuracy and flexibility of segmenting the mass region in mammograms, achieving highly promising results with an accuracy of 98.66\% on the mini-MIAS dataset.\cite{ION2023999}
+The article \textit{Breast Cancer Images Segmentation using Fuzzy Cellular Automaton} presents an innovative approach for segmenting breast cancer images by integrating Cellular Automata  with Fuzzy Logic, resulting in the so-called Fuzzy Cellular Automaton. This method aims to enhance the accuracy and flexibility of segmenting the mass region in mammograms, achieving highly promising results with an accuracy of 98.66\% on the mini-MIAS dataset.\cite{ION2023999}
 
 \subsubsection{Overview of Cellular Automata and Fuzzy Logic Integration}
 
-Cellular Automata (CA) are dynamic systems comprised of a grid of cells, each of which can be in one of several states. The state of each cell at any given time is determined by a set of rules that consider the states of neighboring cells. Traditional CA models operate based on predetermined rules, which can be rigid and may not adapt well to varying conditions. By incorporating Fuzzy Logic into CA, the model gains the ability to categorize pixels more flexibly, enhancing its adaptability to different imaging scenarios.
+Cellular Automata are dynamic systems comprised of a grid of cells, each of which can be in one of several states. The state of each cell at any given time is determined by a set of rules that consider the states of neighboring cells. Traditional CA models operate based on predetermined rules, which can be rigid and may not adapt well to varying conditions. By incorporating Fuzzy Logic into CA, the model gains the ability to categorize pixels more flexibly, enhancing its adaptability to different imaging scenarios.
 
 \subsubsection{Implementation Details}
 
@@ -573,6 +573,7 @@ The article outlines how CA is combined with Fuzzy Logic to form a Fuzzy Cellula
 \end{enumerate}
 
 \subsubsection{Advantages of the Approach}
+
 
 Integrating CA with Fuzzy Logic offers several advantages:
 
@@ -604,7 +605,7 @@ JS library for cellular automata and simple biological simulations. textit{Terra
 
 You can access the repository at: \url{https://rileyjshaw.com/terra/}
 \section{Conclusion}
-In this paper, we have explored the concept of Cellular Automata (CA) and its various types, including deterministic and probabilistic CAs. We have also discussed the importance of boundary conditions in CA models and highlighted some special types of CAs that draw analogies from natural phenomena.
+In this paper, we have explored the concept of Cellular Automata  and its various types, including deterministic and probabilistic CAs. We have also discussed the importance of boundary conditions in CA models and highlighted some special types of CAs that draw analogies from natural phenomena.
 
 Furthermore, we have presented two usage examples of CA in different domains. The first example demonstrates the integration of CA with deep learning techniques for modeling tumor growth, showcasing the scalability and adaptability of the approach. The second example showcases the integration of CA with fuzzy logic for breast cancer image segmentation, highlighting the improved accuracy and visual clarity achieved through this integration.
 
