--- a/Proyecto/presentation.tex
+++ b/Proyecto/presentation.tex
@@ -11,7 +11,7 @@
 \title{Cellular Automata}
 \author{Castillo Reyes, Diego\\
         Escamilla Reséndiz, Aldo\\
-        Muñoz Gonzalez, Eduardo\\
+        Muñoz González, Eduardo\\
         Yañez Martinez, Marthon Leobardo\\}
 \date{\today}
 
