feat: Enable Spanish language support in taubabel.sty

--- a/Proyecto/tau-class/taubabel.sty
+++ b/Proyecto/tau-class/taubabel.sty
@@ -29,7 +29,7 @@
 %----------------------------------------------------------
 
 \newboolean{es-babel}
-\setboolean{es-babel}{false}
+\setboolean{es-babel}{true}
 \ifthenelse{\boolean{es-babel}}
 {
     \usepackage[spanish,es-nodecimaldot,es-noindentfirst]{babel}
