--- a/Proyecto/tau.bib
+++ b/Proyecto/tau.bib
@@ -1,235 +1,264 @@
-@misc{PFGPlots,
-	title = {{PGFPlots - A LaTeX package to create plots.}},
-	url = {https://pgfplots.sourceforge.net/},
+% @misc{PFGPlots,
+% 	title = {{PGFPlots - A LaTeX package to create plots.}},
+% 	url = {https://pgfplots.sourceforge.net/},
+% }
+
+% @incollection{sep-touring-machine,
+% 	author = {De Mol, Liesbeth},
+% 	booktitle = {The {Stanford} Encyclopedia of Philosophy},
+% 	publisher = {Metaphysics Research Lab, Stanford University},
+% 	title = {{Touring Machines}},
+% 	year = {2021},
+% 	url = {https://plato.stanford.edu/archives/win2021/entries/turing-machine/},
+% 	edition = {{W}inter 2021},
+% 	editor = {Edward N. Zalta}
+% }
+
+% @incollection{sep-cellular-automata,
+% 	author = {Berto, Francesco and Tagliabue, Jacopo},
+% 	title = {{Cellular Automata}},
+% 	booktitle = {The {Stanford} Encyclopedia of Philosophy},
+% 	editor = {Edward N. Zalta and Uri Nodelman},
+% 	howpublished = {\url{https://plato.stanford.edu/archives/win2023/entries/cellular-automata/}},
+% 	year = {2023},
+% 	edition = {{W}inter 2023},
+% 	publisher = {Metaphysics Research Lab, Stanford University}
+% }
+
+% @incollection{von-neumann-automata,
+% 	author = {Von Neumann, John},
+% 	title = {{The General and Logical Theory of Automata}},
+% 	booktitle = {J. von Neumann Collected Works},
+% 	editor = {Taub, A.},
+% 	year = {1963},
+% }
+
+% @article{math11102322,
+% 	AUTHOR = {Shafique, Arslan and Khan, Kashif Hesham and Hazzazi, Mohammad Mazyad and Bahkali, Ismail and Bassfar, Zaid and Rehman, Mujeeb Ur},
+% 	TITLE = {Chaos and Cellular Automata-Based Substitution Box and Its Application in Cryptography},
+% 	JOURNAL = {Mathematics},
+% 	VOLUME = {11},
+% 	YEAR = {2023},
+% 	NUMBER = {10},
+% 	ARTICLE-NUMBER = {2322},
+% 	URL = {https://www.mdpi.com/2227-7390/11/10/2322},
+% 	ISSN = {2227-7390},
+% 	ABSTRACT = {Substitution boxes are the key factor in symmetric-key cryptosystems that determines their ability to resist various cryptanalytic attacks. Creating strong substitution boxes that have multiple strong cryptographic properties at the same time is a challenging task for cryptographers. A significant amount of research has been conducted on S-boxes in the past few decades, but the resulting S-boxes have been found to be vulnerable to various cyberattacks. This paper proposes a new method for creating robust S-boxes that exhibit superior performance and possess high scores in multiple cryptographic properties. The hybrid S-box method presented in this paper is based on Chua’s circuit chaotic map, two-dimensional cellular automata, and an algebraic permutation group structure. The proposed 16×16 S-box has an excellent performance in terms of security parameters, including a minimum nonlinearity of 102, the absence of fixed points, the satisfaction of bit independence and strict avalanche criteria, a low differential uniformity of 5, a low linear approximation probability of 0.0603, and an auto-correlation function of 28. The analysis of the performance comparison indicates that the proposed S-box outperforms other state-of-the-art S-box techniques in several aspects. It possesses better attributes, such as a higher degree of inherent security and resilience, which make it more secure and less vulnerable to potential attacks.},
+% 	DOI = {10.3390/math11102322}
+% }
+
+% @incollection{DEWDNEY2008541,
+% 	title = {Cellular Automata},
+% 	editor = {Sven Erik Jørgensen and Brian D. Fath},
+% 	booktitle = {Encyclopedia of Ecology},
+% 	publisher = {Academic Press},
+% 	address = {Oxford},
+% 	pages = {541-550},
+% 	year = {2008},
+% 	isbn = {978-0-08-045405-4},
+% 	doi = {https://doi.org/10.1016/B978-008045405-4.00147-6},
+% 	url = {https://www.sciencedirect.com/science/article/pii/B9780080454054001476},
+% 	author = {A.K. Dewdney},
+% 	keywords = {Cells, Cellular automata, Cellular models, Chemical oscillators, Classification of cellular automata, Ecological applications, Elementary cellular automata, Epidemiology, Finite automata, Game of Life, Testing models}
+% }
+
+% @article{MATIN2024102752,
+% 	title = {A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata},
+% 	journal = {Artificial Intelligence in Medicine},
+% 	volume = {148},
+% 	year = {2024},
+% 	issn = {0933-3657},
+% 	doi = {https://doi.org/10.1016/j.artmed.2023.102752},
+% 	url = {https://www.sciencedirect.com/science/article/pii/S093336572300266X},
+% 	author = {Hossein Nikravesh Matin and Saeed Setayeshi},
+% 	keywords = {Cellular automata, Deep learning, Convolutional neural networks, Cancer},
+% }
+
+% @article{ION2023999,
+% 	title = {Breast Cancer Images Segmentation using Fuzzy Cellular Automaton},
+% 	journal = {Procedia Computer Science},
+% 	volume = {225},
+% 	year = {2023},
+% 	note = {27th International Conference on Knowledge Based and Intelligent Information and Engineering Sytems (KES 2023)},
+% 	issn = {1877-0509},
+% 	doi = {https://doi.org/10.1016/j.procs.2023.10.087},
+% 	url = {https://www.sciencedirect.com/science/article/pii/S1877050923012450},
+% 	author = {Iulia-Andreea Ion and Cristiana Moroz-Dubenco and Anca Andreica},
+% 	keywords = {Cellular Automaton, Fuzzy Logic, Fuzzy Cellular Automaton, Mammograms, Breast Cancer, Segmentation, Mini-MIAS dataset}
+% }
+
+% @book{schiff2007,
+% 	author = {Joel L. Schiff},
+% 	title = {Cellular Automata: A Discrete View of the World},
+% 	year = {2007},
+% 	publisher = {John Wiley \& Sons, Inc.},
+% 	address = {Hoboken, NJ},
+% 	isbn = {978-0-470-11484-7}
+% }
+
+% @book{wolfram2002,
+% 	author = {Stephen Wolfram},
+% 	title = {A New Kind of Science},
+% 	year = {2002},
+% 	publisher = {Wolfram Media},
+% 	address = {Champaign, IL},
+% 	isbn = {978-1-57955-008-0}
+% }
+% @article{gardner1970,
+% 	author = {Martin Gardner},
+% 	title = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
+% 	journal = {Scientific American},
+% 	year = {1970},
+% 	volume = {223},
+% 	number = {4},
+% 	pages = {120-123}
+% }
+% @article{langton1986,
+% 	author = {Christopher G. Langton},
+% 	title = {Studying Artificial Life with Cellular Automata},
+% 	journal = {Physica D: Nonlinear Phenomena},
+% 	year = {1986},
+% 	volume = {22},
+% 	number = {1-3},
+% 	pages = {120-149},
+% 	doi = {10.1016/0167-2789(86)90237-X}
+% }
+
+% @book{pedrycz2010,
+% 	author = {Witold Pedrycz and Fernando Gomide},
+% 	title = {Fuzzy Systems Engineering: Toward Human-Centric Computing},
+% 	year = {2010},
+% 	publisher = {John Wiley \& Sons},
+% 	address = {Hoboken, NJ},
+% 	isbn = {978-0-470-27895-2}
+% }
+
+% @article{brennen2003,
+% 	author = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
+% 	title = {Criteria for exact QCA initialization},
+% 	journal = {Quantum Information and Computation},
+% 	year = {2003},
+% 	volume = {3},
+% 	number = {3},
+% 	pages = {234-242}
+% }
+
+% @article{brennen2003,
+% 	author = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
+% 	title = {Criteria for exact QCA initialization},
+% 	journal = {Quantum Information and Computation},
+% 	year = {2003},
+% 	volume = {3},
+% 	number = {3},
+% 	pages = {234-242}
+% }
+
+
+% @article{gardner1970,
+% 	author = {Martin Gardner},
+% 	title = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
+% 	journal = {Scientific American},
+% 	year = {1970},
+% 	volume = {223},
+% 	number = {4},
+% 	pages = {120-123}
+% }
+
+% @article{langton1986,
+% 	author = {Christopher G. Langton},
+% 	title = {Studying Artificial Life with Cellular Automata},
+% 	journal = {Physica D: Nonlinear Phenomena},
+% 	year = {1986},
+% 	volume = {22},
+% 	number = {1-3},
+% 	pages = {120-149},
+% 	doi = {10.1016/0167-2789(86)90237-X}
+% }
+
+% @book{golly,
+% 	author = {The Golly Gang},
+% 	title = {Golly - A Game of Life Simulator},
+% 	url = {http://golly.sourceforge.net/},
+% 	note = {Accessed: 2024-06-22}
+% }
+
+% @article{rendell2002turing,
+% 	author = {Paul Rendell},
+% 	title = {Turing Machine Universality of the Game of Life},
+% 	journal = {Fundamenta Informaticae},
+% 	year = {2002},
+% 	volume = {29},
+% 	pages = {231-243},
+% 	doi = {10.3233/FI-2002-292301}
+% }
+
+% @book{wolfram2002,
+% 	author = {Stephen Wolfram},
+% 	title = {A New Kind of Science},
+% 	year = {2002},
+% 	publisher = {Wolfram Media},
+% 	address = {Champaign, IL},
+% 	isbn = {978-1-57955-008-0}
+% }
+
+% @article{wolfram1983,
+% 	author = {Stephen Wolfram},
+% 	title = {Statistical Mechanics of Cellular Automata},
+% 	journal = {Reviews of Modern Physics},
+% 	year = {1983},
+% 	volume = {55},
+% 	number = {3},
+% 	pages = {601-644},
+% 	doi = {10.1103/RevModPhys.55.601}
+% }
+
+% @article{cook2004,
+% 	author = {Matthew Cook},
+% 	title = {Universality in Elementary Cellular Automata},
+% 	journal = {Complex Systems},
+% 	year = {2004},
+% 	volume = {15},
+% 	number = {1},
+% 	pages = {1-40},
+% 	url = {http://www.complex-systems.com/pdf/15-1-1.pdf}
+% }
+
+% @article{wolfram1984,
+% 	author = {Stephen Wolfram},
+% 	title = {Universality and Complexity in Cellular Automata},
+% 	journal = {Physica D: Nonlinear Phenomena},
+% 	year = {1984},
+% 	volume = {10},
+% 	number = {1-2},
+% 	pages = {1-35},
+% 	doi = {10.1016/0167-2789(84)90245-8}
+% }
+
+
+-----------------------------------------------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+@article{euler1736,
+  author  = {Leonhard Euler},
+  title   = {Solutio problematis ad geometriam situs pertinentis},
+  journal = {Commentarii Academiae Scientiarum Imperialis Petropolitanae},
+  volume  = {8},
+  pages   = {128--140},
+  year    = {1736}
 }
 
-@incollection{sep-touring-machine,
-	author = {De Mol, Liesbeth},
-	booktitle = {The {Stanford} Encyclopedia of Philosophy},
-	publisher = {Metaphysics Research Lab, Stanford University},
-	title = {{Touring Machines}},
-	year = {2021},
-	url = {https://plato.stanford.edu/archives/win2021/entries/turing-machine/},
-	edition = {{W}inter 2021},
-	editor = {Edward N. Zalta}
-}
-
-@incollection{sep-cellular-automata,
-	author = {Berto, Francesco and Tagliabue, Jacopo},
-	title = {{Cellular Automata}},
-	booktitle = {The {Stanford} Encyclopedia of Philosophy},
-	editor = {Edward N. Zalta and Uri Nodelman},
-	howpublished = {\url{https://plato.stanford.edu/archives/win2023/entries/cellular-automata/}},
-	year = {2023},
-	edition = {{W}inter 2023},
-	publisher = {Metaphysics Research Lab, Stanford University}
-}
-
-@incollection{von-neumann-automata,
-	author = {Von Neumann, John},
-	title = {{The General and Logical Theory of Automata}},
-	booktitle = {J. von Neumann Collected Works},
-	editor = {Taub, A.},
-	year = {1963},
-}
-
-@article{math11102322,
-	AUTHOR = {Shafique, Arslan and Khan, Kashif Hesham and Hazzazi, Mohammad Mazyad and Bahkali, Ismail and Bassfar, Zaid and Rehman, Mujeeb Ur},
-	TITLE = {Chaos and Cellular Automata-Based Substitution Box and Its Application in Cryptography},
-	JOURNAL = {Mathematics},
-	VOLUME = {11},
-	YEAR = {2023},
-	NUMBER = {10},
-	ARTICLE-NUMBER = {2322},
-	URL = {https://www.mdpi.com/2227-7390/11/10/2322},
-	ISSN = {2227-7390},
-	ABSTRACT = {Substitution boxes are the key factor in symmetric-key cryptosystems that determines their ability to resist various cryptanalytic attacks. Creating strong substitution boxes that have multiple strong cryptographic properties at the same time is a challenging task for cryptographers. A significant amount of research has been conducted on S-boxes in the past few decades, but the resulting S-boxes have been found to be vulnerable to various cyberattacks. This paper proposes a new method for creating robust S-boxes that exhibit superior performance and possess high scores in multiple cryptographic properties. The hybrid S-box method presented in this paper is based on Chua’s circuit chaotic map, two-dimensional cellular automata, and an algebraic permutation group structure. The proposed 16×16 S-box has an excellent performance in terms of security parameters, including a minimum nonlinearity of 102, the absence of fixed points, the satisfaction of bit independence and strict avalanche criteria, a low differential uniformity of 5, a low linear approximation probability of 0.0603, and an auto-correlation function of 28. The analysis of the performance comparison indicates that the proposed S-box outperforms other state-of-the-art S-box techniques in several aspects. It possesses better attributes, such as a higher degree of inherent security and resilience, which make it more secure and less vulnerable to potential attacks.},
-	DOI = {10.3390/math11102322}
-}
-
-@incollection{DEWDNEY2008541,
-	title = {Cellular Automata},
-	editor = {Sven Erik Jørgensen and Brian D. Fath},
-	booktitle = {Encyclopedia of Ecology},
-	publisher = {Academic Press},
-	address = {Oxford},
-	pages = {541-550},
-	year = {2008},
-	isbn = {978-0-08-045405-4},
-	doi = {https://doi.org/10.1016/B978-008045405-4.00147-6},
-	url = {https://www.sciencedirect.com/science/article/pii/B9780080454054001476},
-	author = {A.K. Dewdney},
-	keywords = {Cells, Cellular automata, Cellular models, Chemical oscillators, Classification of cellular automata, Ecological applications, Elementary cellular automata, Epidemiology, Finite automata, Game of Life, Testing models}
-}
-
-@article{MATIN2024102752,
-	title = {A computational tumor growth model experience based on molecular dynamics point of view using deep cellular automata},
-	journal = {Artificial Intelligence in Medicine},
-	volume = {148},
-	year = {2024},
-	issn = {0933-3657},
-	doi = {https://doi.org/10.1016/j.artmed.2023.102752},
-	url = {https://www.sciencedirect.com/science/article/pii/S093336572300266X},
-	author = {Hossein Nikravesh Matin and Saeed Setayeshi},
-	keywords = {Cellular automata, Deep learning, Convolutional neural networks, Cancer},
-}
-
-@article{ION2023999,
-	title = {Breast Cancer Images Segmentation using Fuzzy Cellular Automaton},
-	journal = {Procedia Computer Science},
-	volume = {225},
-	year = {2023},
-	note = {27th International Conference on Knowledge Based and Intelligent Information and Engineering Sytems (KES 2023)},
-	issn = {1877-0509},
-	doi = {https://doi.org/10.1016/j.procs.2023.10.087},
-	url = {https://www.sciencedirect.com/science/article/pii/S1877050923012450},
-	author = {Iulia-Andreea Ion and Cristiana Moroz-Dubenco and Anca Andreica},
-	keywords = {Cellular Automaton, Fuzzy Logic, Fuzzy Cellular Automaton, Mammograms, Breast Cancer, Segmentation, Mini-MIAS dataset}
-}
-
-@book{schiff2007,
-  author    = {Joel L. Schiff},
-  title     = {Cellular Automata: A Discrete View of the World},
-  year      = {2007},
-  publisher = {John Wiley \& Sons, Inc.},
-  address   = {Hoboken, NJ},
-  isbn      = {978-0-470-11484-7}
-}
-
-@book{wolfram2002,
-  author    = {Stephen Wolfram},
-  title     = {A New Kind of Science},
-  year      = {2002},
-  publisher = {Wolfram Media},
-  address   = {Champaign, IL},
-  isbn      = {978-1-57955-008-0}
-}
-@article{gardner1970,
-  author  = {Martin Gardner},
-  title   = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
-  journal = {Scientific American},
-  year    = {1970},
-  volume  = {223},
-  number  = {4},
-  pages   = {120-123}
-}
-@article{langton1986,
-  author  = {Christopher G. Langton},
-  title   = {Studying Artificial Life with Cellular Automata},
-  journal = {Physica D: Nonlinear Phenomena},
-  year    = {1986},
-  volume  = {22},
-  number  = {1-3},
-  pages   = {120-149},
-  doi     = {10.1016/0167-2789(86)90237-X}
-}
-
-@book{pedrycz2010,
-  author    = {Witold Pedrycz and Fernando Gomide},
-  title     = {Fuzzy Systems Engineering: Toward Human-Centric Computing},
-  year      = {2010},
-  publisher = {John Wiley \& Sons},
-  address   = {Hoboken, NJ},
-  isbn      = {978-0-470-27895-2}
-}
-
-@article{brennen2003,
-  author  = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
-  title   = {Criteria for exact QCA initialization},
-  journal = {Quantum Information and Computation},
-  year    = {2003},
-  volume  = {3},
-  number  = {3},
-  pages   = {234-242}
-}
-
-@article{brennen2003,
-  author  = {Gavin K. Brennen and David P. O'Leary and Stephen S. Bullock},
-  title   = {Criteria for exact QCA initialization},
-  journal = {Quantum Information and Computation},
-  year    = {2003},
-  volume  = {3},
-  number  = {3},
-  pages   = {234-242}
-}
 
 
-@article{gardner1970,
-  author  = {Martin Gardner},
-  title   = {Mathematical Games: The fantastic combinations of John Conway's new solitaire game "life"},
-  journal = {Scientific American},
-  year    = {1970},
-  volume  = {223},
-  number  = {4},
-  pages   = {120-123}
-}
-
-@article{langton1986,
-  author  = {Christopher G. Langton},
-  title   = {Studying Artificial Life with Cellular Automata},
-  journal = {Physica D: Nonlinear Phenomena},
-  year    = {1986},
-  volume  = {22},
-  number  = {1-3},
-  pages   = {120-149},
-  doi     = {10.1016/0167-2789(86)90237-X}
-}
-
-@book{golly,
-  author    = {The Golly Gang},
-  title     = {Golly - A Game of Life Simulator},
-  url       = {http://golly.sourceforge.net/},
-  note      = {Accessed: 2024-06-22}
-}
-
-@article{rendell2002turing,
-  author    = {Paul Rendell},
-  title     = {Turing Machine Universality of the Game of Life},
-  journal   = {Fundamenta Informaticae},
-  year      = {2002},
-  volume    = {29},
-  pages     = {231-243},
-  doi       = {10.3233/FI-2002-292301}
-}
-
-@book{wolfram2002,
-  author    = {Stephen Wolfram},
-  title     = {A New Kind of Science},
-  year      = {2002},
-  publisher = {Wolfram Media},
-  address   = {Champaign, IL},
-  isbn      = {978-1-57955-008-0}
-}
-
-@article{wolfram1983,
-  author  = {Stephen Wolfram},
-  title   = {Statistical Mechanics of Cellular Automata},
-  journal = {Reviews of Modern Physics},
-  year    = {1983},
-  volume  = {55},
-  number  = {3},
-  pages   = {601-644},
-  doi     = {10.1103/RevModPhys.55.601}
-}
-
-@article{cook2004,
-  author  = {Matthew Cook},
-  title   = {Universality in Elementary Cellular Automata},
-  journal = {Complex Systems},
-  year    = {2004},
-  volume  = {15},
-  number  = {1},
-  pages   = {1-40},
-  url     = {http://www.complex-systems.com/pdf/15-1-1.pdf}
-}
-
-@article{wolfram1984,
-  author  = {Stephen Wolfram},
-  title   = {Universality and Complexity in Cellular Automata},
-  journal = {Physica D: Nonlinear Phenomena},
-  year    = {1984},
-  volume  = {10},
-  number  = {1-2},
-  pages   = {1-35},
-  doi     = {10.1016/0167-2789(84)90245-8}
+@book{appel1976,
+  author    = {Kenneth Appel and Wolfgang Haken},
+  title     = {Every Planar Map Is Four Colorable},
+  year      = {1976},
+  series    = {Contemporary Mathematics},
+  volume    = {98},
+  publisher = {American Mathematical Society},
+  address   = {Providence, RI}
 }
