feat: Implement PSO algorithm for Minimum Coloring Graph Problem

--- a/Proyecto/InvestProy.tex
+++ b/Proyecto/InvestProy.tex
@@ -101,6 +101,13 @@
     
 \section{Metodología}
 
+    Para poder resolver el problema de la coloración mínima, se propone una solución basada en algoritmos genéticos.
+    El algoritmo genetico elegido fue el de PSO (Particle Swarm Optimization), el cual es un algoritmo de optimización basado en la inteligencia de enjambre.
+    El algoritmo PSO se basa en el comportamiento social de las particulas, las cuales se mueven en un espacio de búsqueda en busca de la mejor solución.
+    Las particulas tienen mejoras cognitivas y mejoras sociales, las cuales les permiten moverse en el espacio de búsqueda.
+    En el caso del problema de la coloración mínima, las particulas representan una coloración de un grafo, y el objetivo es encontrar la coloración mínima.
+    Para ello, se propone una representación de las particulas como un arreglo de colores, donde cada color representa un vértice del grafo.
+    
 
 \section{Resultados}
 
